test: enhance CreateRepairOrderUseCaseTest and add RepairOrderMapperTest for improved validation and mapping